--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-media": "1.6.1",
     "react-scripts": "1.0.17",
     "rebass": "1.0.4",
     "superagent": "3.8.2"
